todo_app/ingress/todo-strip.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: todo-strip
spec:
  stripPrefix:
    prefixes:
      - /todo
      - /todo-backend
