todo_app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: todo-strip@kubernetescrd
spec:
  rules:
  - http:
      paths:
      # Frontend
      - path: /todo
        pathType: Exact
        backend:
          service:
            name: todoapp-svc
            port:
              number: 2345
      # Backend
      - path: /todo-backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2345
